--- a/Python UTube Video Downloader.ipynb
+++ b/Python UTube Video Downloader.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "################################### Correct Code for UTube Video Download with Progress Bar #########################\n",
+    "################################### Code for UTube Video Downloader with Progress Bar #########################\n",
     "#!pip install tkinter\n",
     "#!pip install pytube\n",
     "#####################################################################################################################\n",
